--- a/BreakOutGame/BreakOutGame.vcxproj.filters
+++ b/BreakOutGame/BreakOutGame.vcxproj.filters
@@ -27,52 +27,46 @@
     </Filter>
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="Scripts\MainDriver.cpp">
-      <Filter>Source Files</Filter>
-    </ClCompile>
-    <ClCompile Include="Scripts\Sprite\Sprite.cpp">
-      <Filter>Source Files\Sprite</Filter>
-    </ClCompile>
-    <ClCompile Include="Scripts\GameManager\SubSystemManager.cpp">
-      <Filter>Source Files\GameManager</Filter>
-    </ClCompile>
-    <ClCompile Include="Scripts\GameManager\SDLManager.cpp">
-      <Filter>Source Files\GameManager</Filter>
-    </ClCompile>
-    <ClCompile Include="Scripts\Sprite\GameSprites\Brick.cpp">
-      <Filter>Source Files</Filter>
-    </ClCompile>
-    <ClCompile Include="Scripts\Component\Render\GameRenderer.cpp">
+    <ClCompile Include="Engine\Component\Render\GameRenderer.cpp">
       <Filter>Source Files\Component\Render</Filter>
     </ClCompile>
-    <ClCompile Include="Scripts\Component\GameComponent.cpp">
+    <ClCompile Include="Engine\Component\Render\RectangleRenderer2D.cpp">
+      <Filter>Source Files\Component\Render</Filter>
+    </ClCompile>
+    <ClCompile Include="Engine\Component\GameComponent.cpp">
       <Filter>Source Files\Component</Filter>
     </ClCompile>
-    <ClCompile Include="Scripts\Component\Render\RectangleRenderer2D.cpp">
-      <Filter>Source Files\Component\Render</Filter>
+    <ClCompile Include="Engine\MainDriver.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="Engine\Sprite\Sprite.cpp">
+      <Filter>Source Files\Sprite</Filter>
+    </ClCompile>
+    <ClCompile Include="Engine\GameManager\SDLManager.cpp">
+      <Filter>Source Files\GameManager</Filter>
+    </ClCompile>
+    <ClCompile Include="Engine\GameManager\SubSystemManager.cpp">
+      <Filter>Source Files\GameManager</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="Scripts\Sprite\Sprite.h">
-      <Filter>Source Files\Sprite</Filter>
-    </ClInclude>
-    <ClInclude Include="Scripts\GameManager\SubSystemManager.h">
-      <Filter>Source Files\GameManager</Filter>
-    </ClInclude>
-    <ClInclude Include="Scripts\GameManager\SDLManager.h">
-      <Filter>Source Files\GameManager</Filter>
-    </ClInclude>
-    <ClInclude Include="Scripts\Sprite\GameSprites\Brick.h">
-      <Filter>Header Files</Filter>
-    </ClInclude>
-    <ClInclude Include="Scripts\Component\Render\GameRenderer.h">
+    <ClInclude Include="Engine\Component\Render\GameRenderer.h">
       <Filter>Source Files\Component\Render</Filter>
     </ClInclude>
-    <ClInclude Include="Scripts\Component\GameComponent.h">
+    <ClInclude Include="Engine\Component\Render\RectangleRenderer2D.h">
+      <Filter>Source Files\Component\Render</Filter>
+    </ClInclude>
+    <ClInclude Include="Engine\Component\GameComponent.h">
       <Filter>Source Files\Component</Filter>
     </ClInclude>
-    <ClInclude Include="Scripts\Component\Render\RectangleRenderer2D.h">
-      <Filter>Source Files\Component\Render</Filter>
+    <ClInclude Include="Engine\Sprite\Sprite.h">
+      <Filter>Source Files\Sprite</Filter>
+    </ClInclude>
+    <ClInclude Include="Engine\GameManager\SDLManager.h">
+      <Filter>Source Files\GameManager</Filter>
+    </ClInclude>
+    <ClInclude Include="Engine\GameManager\SubSystemManager.h">
+      <Filter>Source Files\GameManager</Filter>
     </ClInclude>
   </ItemGroup>
 </Project>
